--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-table": "^8.21.3",
+    "autoprefixer": "^10.4.22",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -20,7 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
