--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
